spacing and link fixes

--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,10 @@ main h2 {
     border-bottom: 1px solid black;
 }
 
+main a {
+    text-decoration: none;
+}
+
 footer a:visited {
     color: yellow;
 }
